[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# yew = "0.19"
yew = { git = "https://github.com/yewstack/yew/" }
log = "0.4.6"
wasm-logger = "0.2.0"

[[bin]]
name = "yew-app"
path = "/root/yew-app/src/main.rs" # Win
# path = "/Users/syu/yew-app/src/main.rs" # Mac






